Update Italian translation

--- a/WeatherBZ/res/values-it/strings.xml
+++ b/WeatherBZ/res/values-it/strings.xml
@@ -1,8 +1,9 @@
 ﻿<resources>
+
     <string name="app_name">Weather BZ</string>
-    <string name="widget_name_small">Weather BZ</string>
-    <string name="widget_name_medium">Weather BZ</string>
-    <string name="widget_name_large">Weather BZ</string>
+    <string name="widget_name_small">Weather BZ (2x1)</string>
+    <string name="widget_name_medium">Weather BZ (4x1)</string>
+    <string name="widget_name_large">Weather BZ (4x2)</string>
     <string name="about_version">Versione</string>
     <string name="about_author">Autore</string>
     <string name="about_provider">Provider Meteo</string>
@@ -65,51 +66,51 @@
     <string name="weather_visibility_measure">&quot; m&quot;</string>
     <string name="wt_clear">Sereno</string>
     <string name="wt_mostly_clear">Prevalentemente sereno</string>
-    <string name="wt_mostly_clear_pos_rain">Prevalentemente sereno, Possibile pioggia</string>
-    <string name="wt_mostly_clear_pos_wet_snow">Prevalentemente sereno, Possibile nevischio</string>
-    <string name="wt_mostly_clear_pos_snow">Prevalentemente sereno, Possibile neve</string>
-    <string name="wt_mostly_clear_pos_ts_rain">Prevalentemente sereno, Possibili temporali</string>
-    <string name="wt_mostly_clear_pos_ts_wet_snow">Prevalentemente sereno, Possibili temporali e nevischio</string>
-    <string name="wt_mostly_clear_pos_ts_snow">Prevalentemente sereno, Possibili temporali con neve</string>
+    <string name="wt_mostly_clear_pos_rain">Possibile pioggia</string>
+    <string name="wt_mostly_clear_pos_wet_snow">Possibile nevischio</string>
+    <string name="wt_mostly_clear_pos_snow">Possibile neve</string>
+    <string name="wt_mostly_clear_pos_ts_rain">Possibili temporali</string>
+    <string name="wt_mostly_clear_pos_ts_wet_snow">Possibili temporali e nevischio</string>
+    <string name="wt_mostly_clear_pos_ts_snow">Possibili temporali con neve</string>
     <string name="wt_partly_cloudy">Parzialmente nuvoloso</string>
-    <string name="wt_partly_cloudy_l_rain">Parzialmente nuvoloso, Pioggerellina</string>
-    <string name="wt_partly_cloudy_l_wet_snow">Parzialmente nuvoloso, Leggero nevischio</string>
-    <string name="wt_partly_cloudy_l_snow">Parzialmente nuvoloso, Leggera neve</string>
-    <string name="wt_partly_cloudy_showers">Parzialmente nuvoloso, Acquazzoni</string>
-    <string name="wt_partly_cloudy_wet_snow_showers">Parzialmente nuvoloso, Acquazzoni e nevischio</string>
-    <string name="wt_partly_cloudy_snow_showers">Parzialmente nuvoloso, Acquazzoni e neve</string>
-    <string name="wt_partly_cloudy_rain">Parzialmente nuvoloso, Pioggia</string>
-    <string name="wt_partly_cloudy_wet_snow">Parzialmente nuvoloso, Nevischio</string>
-    <string name="wt_partly_cloudy_snow">Parzialmente nuvoloso, Neve</string>
-    <string name="wt_partly_cloudy_pos_ts_rain">Parzialmente nuvoloso, Possibili temporali</string>
-    <string name="wt_partly_cloudy_pos_ts_wet_snow">Parzialmente nuvoloso, Possibili temporali e nevischio</string>
-    <string name="wt_partly_cloudy_pos_ts_snow">Parzialmente nuvoloso, Possibili temporali e neve</string>
+    <string name="wt_partly_cloudy_l_rain">Pioggerellina</string>
+    <string name="wt_partly_cloudy_l_wet_snow">Leggero nevischio</string>
+    <string name="wt_partly_cloudy_l_snow">Leggera neve</string>
+    <string name="wt_partly_cloudy_showers">Acquazzoni</string>
+    <string name="wt_partly_cloudy_wet_snow_showers">Acquazzoni e nevischio</string>
+    <string name="wt_partly_cloudy_snow_showers">Acquazzoni e neve</string>
+    <string name="wt_partly_cloudy_rain">Pioggia</string>
+    <string name="wt_partly_cloudy_wet_snow">Nevischio</string>
+    <string name="wt_partly_cloudy_snow">Neve</string>
+    <string name="wt_partly_cloudy_pos_ts_rain">Possibili temporali</string>
+    <string name="wt_partly_cloudy_pos_ts_wet_snow">Possibili temporali e nevischio</string>
+    <string name="wt_partly_cloudy_pos_ts_snow">Possibili temporali e neve</string>
     <string name="wt_cloudy">Nuvoloso</string>
-    <string name="wt_cloudy_l_rain">Nuvoloso, Pioggerellina</string>
-    <string name="wt_cloudy_l_wet_snow">Nuvoloso, Leggero nevischio</string>
-    <string name="wt_cloudy_l_snow">Nuvoloso, Leggera neve</string>
-    <string name="wt_cloudy_showers">Nuvoloso, Acquazzoni</string>
-    <string name="wt_cloudy_wet_snow_showers">Nuvoloso, Acquazzoni e nevischio</string>
-    <string name="wt_cloudy_snow_showers">Nuvoloso, Acquazzoni e neve</string>
-    <string name="wt_cloudy_rain">Nuvoloso, Pioggia</string>
-    <string name="wt_cloudy_wet_snow">Nuvoloso, Nevischio</string>
-    <string name="wt_cloudy_snow">Nuvoloso, Neve</string>
-    <string name="wt_cloudy_ts_rain">Nuvoloso, Temporali</string>
-    <string name="wt_cloudy_ts_wet_snow">Nuvoloso, Temporali e nevischio</string>
-    <string name="wt_cloudy_ts_snow">Nuvoloso, Temporali e neve</string>
+    <string name="wt_cloudy_l_rain">Pioggerellina</string>
+    <string name="wt_cloudy_l_wet_snow">Leggero nevischio</string>
+    <string name="wt_cloudy_l_snow">Leggera neve</string>
+    <string name="wt_cloudy_showers">Acquazzoni</string>
+    <string name="wt_cloudy_wet_snow_showers">Acquazzoni e nevischio</string>
+    <string name="wt_cloudy_snow_showers">Acquazzoni e neve</string>
+    <string name="wt_cloudy_rain">Pioggia</string>
+    <string name="wt_cloudy_wet_snow">Nevischio</string>
+    <string name="wt_cloudy_snow">Neve</string>
+    <string name="wt_cloudy_ts_rain">Temporali</string>
+    <string name="wt_cloudy_ts_wet_snow">Temporali e nevischio</string>
+    <string name="wt_cloudy_ts_snow">Temporali e neve</string>
     <string name="wt_overcast">Coperto</string>
-    <string name="wt_overcast_l_rain">Coperto, Pioggerellina</string>
-    <string name="wt_overcast_l_wet_snow">Coperto, Leggero nevischio</string>
-    <string name="wt_overcast_l_snow">Coperto, Leggera neve</string>
-    <string name="wt_overcast_showers">Coperto, Acquazzoni</string>
-    <string name="wt_overcast_wet_snow_showers">Coperto, Acquazzoni e nevischio</string>
-    <string name="wt_overcast_snow_showers">Coperto, Neve</string>
-    <string name="wt_overcast_rain">Coperto, Pioggia</string>
-    <string name="wt_overcast_wet_snow">Coperto, Nevischio</string>
-    <string name="wt_overcast_snow">Coperto, Neve</string>
-    <string name="wt_overcast_ts_rain">Coperto, Temporali</string>
-    <string name="wt_overcast_ts_wet_snow">Coperto, Temporali e nevischio</string>
-    <string name="wt_overcast_ts_snow">Coperto, Temporali e neve</string>
+    <string name="wt_overcast_l_rain">Pioggerellina</string>
+    <string name="wt_overcast_l_wet_snow">Leggero nevischio</string>
+    <string name="wt_overcast_l_snow">Leggera neve</string>
+    <string name="wt_overcast_showers">Acquazzoni</string>
+    <string name="wt_overcast_wet_snow_showers">Acquazzoni e nevischio</string>
+    <string name="wt_overcast_snow_showers">Neve</string>
+    <string name="wt_overcast_rain">Pioggia</string>
+    <string name="wt_overcast_wet_snow">Nevischio</string>
+    <string name="wt_overcast_snow">Neve</string>
+    <string name="wt_overcast_ts_rain">Temporali</string>
+    <string name="wt_overcast_ts_wet_snow">Temporali e nevischio</string>
+    <string name="wt_overcast_ts_snow">Temporali e neve</string>
     <string name="wt_end">Coperto, cenere vulcanica!</string>
     <string name="settings_update_fun_title">Previsioni divertenti</string>
     <string name="settings_update_fun_summary">Mostra previsioni del meteo divertenti (ex: fine del mondo)</string>
@@ -123,10 +124,11 @@
     <string name="settings_category_notification">Notifiche</string>
     <string name="settings_category_notification_sum">Regola le notifiche meteo nell\'area di notifica di sistema</string>
     <string name="settings_category_network">Impostazioni di Rete</string>
+    <string name="settings_category_network_sum">Regola le impostazioni di rete per gli aggiornamenti meteo</string>
     <string name="settings_notification_title">Mostra le notifiche</string>
     <string name="settings_notification_summary">Mostra l\'attuale condizione meteo nell\'area di notifica di sistema</string>
-    <string name="settings_update_wifi_only_title">Aggiorna solo con Wi-Fi</string>
-    <string name="settings_update_wifi_only_summary">Aggiorna automaticamente i dati meteo quando si è connessi con una wifi</string>
+    <string name="settings_update_wifi_title">Aggiorna solo con Wi-Fi</string>
+    <string name="settings_update_wifi_summary">Aggiorna automaticamente i dati meteo quando si è connessi con una wifi</string>
     <string name="settings_update_roaming_title">Aggiorna in roaming</string>
     <string name="settings_update_roaming_summary">Aggiorna automaticamente i dati meteo quando si è in roaming.</string>
     <string name="settings_category_locations">Località</string>
@@ -143,7 +145,8 @@
     <string name="settings_show_short_desc_summary">Mostra la descrizione breve o completa nelle previsioni 3-giorni</string>
     <string name="settings_notification_white_text_title">Testo bianco nelle notifiche</string>
     <string name="settings_notification_white_text_summary">Usa il testo di colore bianco nelle notifiche (per i temi scuri)</string>
-    <string name="settings_notification_color_title">Colore della symbol nella barra di stato</string>
+    <string name="settings_notification_temp_color_title">Colore della temperatura nella barra di stato</string>
+    <string name="settings_notification_temp_color_summary">Colore del simbolo della temperatura nella barra di stato</string>
     <string name="settings_category_widgets">Widgets</string>
     <string name="settings_category_widgets_sum">Mostra le impostazioni dei Widget e le azioni ai click</string>
     <string name="settings_widgets_click_clock_title">Click sull\'orologio</string>
@@ -169,5 +172,5 @@
     <string name="settings_widgets_widget4x2_custom_font_summary">Modifica le dimensioni del font a proprio piacimento</string>
     <string name="settings_show_info_title">Mostra dettagli</string>
     <string name="settings_show_info_summary">Mostra o nascondi elementi nell\'interfaccia</string>
-    <string name="settings_language">Languaggio</string>
+    <string name="settings_language">Langua</string>
 </resources>
