--- a/WeatherBZ/res/values-it/strings.xml
+++ b/WeatherBZ/res/values-it/strings.xml
@@ -1,16 +1,15 @@
-﻿<resources>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<resources>
     <string name="app_name">Weather BZ</string>
-    <!-- Need translations: -->
-    <!-- string name="new_version">New version</string>
-    <string name="no_updates">No new versions</string>
-    <string name="close">Close</string>
-    <string name="upgrade">Upgrade</string>
-    <string name="not_now">Not now</string--> 
+    <string name="new_version">Nuova Versione</string>
+    <string name="no_updates">Nessun Aggiornamento</string>
+    <string name="close">Chiudi</string>
+    <string name="upgrade">Aggiorna</string>
+    <string name="not_now">Non ora</string>
     <string name="settings_check_updates_title">Controlla Aggiornamenti</string>
-    <string name="settings_check_updates_summary">Controlla aggiornamenti all\'avvio</string>       
+    <string name="settings_check_updates_summary">"Controlla aggiornamenti all'avvio"</string>
     <string name="settings_category_app_update">Application update</string>
-    <string name="settings_category_forecast_update">Forecast update</string>    
+    <string name="settings_category_forecast_update">Forecast update</string>
     <string name="widget_name_small">Weather BZ (2x1)</string>
     <string name="widget_name_medium">Weather BZ (4x1)</string>
     <string name="widget_name_large">Weather BZ (4x2)</string>
@@ -43,11 +42,12 @@
     <string name="location_edit">Inserisci la località</string>
     <string name="weather_no_city">Nessuna località</string>
     <string name="weather_no_conditions_data">Nessun dato meteo</string>
-    <string name="weather_humidity">&quot;Umidità: &quot;</string>
+    <string name="weather_no_temp_data">-°</string>
+    <string name="weather_humidity">"Umidità: "</string>
     <string name="weather_wind">"Vento: "</string>
     <string name="weather_feel">"Percepito: "</string>
-    <string name="weather_pressure">&quot;Pressione: &quot;</string>
-    <string name="weather_visibility">&quot;Visibilità: &quot;</string>
+    <string name="weather_pressure">"Pressione: "</string>
+    <string name="weather_visibility">"Visibilità: "</string>
     <string name="weather_forecast_tom">Nessun dato</string>
     <string name="weather_forecast_tom2">Nessun dato</string>
     <string name="weather_forecast_tom3">Nessun dato</string>
@@ -67,12 +67,12 @@
     <string name="settings_about_summary">Informazioni sul programma e crediti</string>
     <string name="no_provider">Localizzazione fallita - Scegli la località manualmente</string>
     <string name="network_error">Impossibile connettersi al server</string>
-    <string name="updating">Aggiornamento\u2026</string>
+    <string name="updating">Aggiornamento…</string>
     <string name="just_now">Proprio ora</string>
-    <string name="fetching_location">Localizzazione\u2026</string>
-    <string name="weather_wind_measure">&quot; m/s&quot;</string>
-    <string name="weather_pressure_measure">&quot; mm Hg&quot;</string>
-    <string name="weather_visibility_measure">&quot; m&quot;</string>
+    <string name="fetching_location">Localizzazione…</string>
+    <string name="weather_wind_measure">" m/s"</string>
+    <string name="weather_pressure_measure">" mm Hg"</string>
+    <string name="weather_visibility_measure">" m"</string>
     <string name="wt_clear">Sereno</string>
     <string name="wt_mostly_clear">Prevalentemente sereno</string>
     <string name="wt_mostly_clear_pos_rain">Possibile pioggia</string>
@@ -131,12 +131,12 @@
     <string name="download_video">Scarica video</string>
     <string name="conf_no_background">Nessuno sfondo</string>
     <string name="settings_category_notification">Notifiche</string>
-    <string name="settings_category_notification_sum">Regola le notifiche meteo nell\'area di notifica di sistema</string>
+    <string name="settings_category_notification_sum">"Regola le notifiche meteo nell'area di notifica di sistema"</string>
     <string name="settings_category_network">Impostazioni di Rete</string>
     <string name="settings_notification_title">Mostra le notifiche</string>
-    <string name="settings_notification_summary">Mostra l\'attuale condizione meteo nell\'area di notifica di sistema</string>
-    <string name="settings_update_wifi_title">Aggiorna solo con Wi-Fi</string>
-    <string name="settings_update_wifi_summary">Aggiorna automaticamente i dati meteo quando si è connessi con una wifi</string>
+    <string name="settings_notification_summary">"Mostra l'attuale condizione meteo nell'area di notifica di sistema"</string>
+    <string name="settings_update_wifi_only_title">Aggiorna solo con WI-FI</string>
+    <string name="settings_update_wifi_only_summary">Aggiorna automaticamente le previsioni solo quando si è connessi in WI-FI</string>
     <string name="settings_update_roaming_title">Aggiorna in roaming</string>
     <string name="settings_update_roaming_summary">Aggiorna automaticamente i dati meteo quando si è in roaming.</string>
     <string name="settings_category_locations">Località</string>
@@ -156,10 +156,10 @@
     <string name="settings_notification_color_title">Colore nella barra di stato</string>
     <string name="settings_category_widgets">Widgets</string>
     <string name="settings_category_widgets_sum">Mostra le impostazioni dei Widget e le azioni ai click</string>
-    <string name="settings_widgets_click_clock_title">Click sull\'orologio</string>
-    <string name="settings_widgets_click_clock_summary">Scegli l\'applicazione da lanciare al click sull\'orologio nei widget</string>
+    <string name="settings_widgets_click_clock_title">"Click sull'orologio"</string>
+    <string name="settings_widgets_click_clock_summary">"Scegli l'applicazione da lanciare al click sull'orologio nei widget"</string>
     <string name="settings_widgets_click_weather_title">Click sul meteo</string>
-    <string name="settings_widgets_click_weather_summary">Scegli l\'applicazione da lanciare al click sul meteo nei widget (temperatura)</string>
+    <string name="settings_widgets_click_weather_summary">"Scegli l'applicazione da lanciare al click sul meteo nei widget (temperatura)"</string>
     <string name="settings_widgets_widget4x2">Widget 4x2</string>
     <string name="settings_widgets_widget4x2_desc_font_title">Descrizione Meteo</string>
     <string name="settings_widgets_widget4x2_desc_font_summary">Valore default 22sp</string>
@@ -178,17 +178,16 @@
     <string name="settings_widgets_widget4x2_custom_font_title">Grandezza Font Personale</string>
     <string name="settings_widgets_widget4x2_custom_font_summary">Modifica le dimensioni del font a proprio piacimento</string>
     <string name="settings_show_info_title">Mostra dettagli</string>
-    <string name="settings_show_info_summary">Mostra o nascondi elementi nell\'interfaccia</string>
-    <string name="settings_language">Langua</string>
+    <string name="settings_show_info_summary">"Mostra o nascondi elementi nell'interfaccia"</string>
+    <string name="settings_language">Lingua</string>
     <string name="settings_notification_type">Notifica Grafica</string>
     <string name="quiet_hours_title">ORE QUIETI</string>
     <string name="quiet_hours_enabled">Attiva le ore quieti</string>
     <string name="quiet_hours_enabled_on">Ore quieti abilitate</string>
     <string name="quiet_hours_enabled_off">Gli aggiornamenti funzioneranno normalmente</string>
     <string name="start_time_title">Inizio</string>
-    <string name="end_time_title">Fine</string>  
-    <!-- Need translations: -->
-    <!-- string name="dlg_select_action">Select an action</string>
-    <string name="dlg_go_to_forecast">Go to forecast</string>
-    <string name="dlg_set_as_home">Set as \"Home City\"</string-->
+    <string name="end_time_title">Fine</string>
+    <string name="dlg_select_action">Scegli un\'azione</string>
+    <string name="dlg_go_to_forecast">Vai alle previsioni</string>
+    <string name="dlg_set_as_home">Imposta come \"Città Base\"</string>
 </resources>
