--- a/WeatherBZ/res/values/strings.xml
+++ b/WeatherBZ/res/values/strings.xml
@@ -141,7 +141,7 @@
     <string name="settings_category_locations">Location settings</string>
     <string name="settings_category_locations_sum">Weather location settings</string>
     <string name="settings_category_appearance">Appearance</string>
-    <string name="settings_category_appearance_sum">Appearance settings (show or hide data, language etc.)</string>
+    <string name="settings_category_appearance_sum">Appearance settings (show/hide data etc.)</string>
     <string name="settings_location_use_my_title">Use my location</string>
     <string name="settings_location_use_my_summary">Automatically use my location (from network)</string>
     <string name="settings_show_temp_symbol_title">Show temperatute symbol</string>
